Fix #37, default nav-pills alignment.

--- a/less/navs-rtl.less
+++ b/less/navs-rtl.less
@@ -34,7 +34,7 @@
 // -------------------------
 .nav-pills {
   > li {
-    float: none;
+    float: right;
 
     // Links rendered as pills
     > a {
